--- a/examples/cube.html
+++ b/examples/cube.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Glower : Cube example</title>
-    <script src="../src/glower.js"></script>
+    <title>Gladder : Cube example</title>
+    <script src="../src/gl-matrix.js"></script>
+    <script src="../src/webgl-debug.js"></script>
+    <script src="../src/gladder.js"></script>
   </head>
   <body>
-    <h1>Glower : Cube example</h1>
+    <h1>Gladder : Cube example</h1>
     <p>Because every OpenGL demo needs a spinning cube, right?</p>
+
     <canvas id="canvas" width="800" height="600"></canvas>
+
     <script id="vertex-shader" type="x-shader/x-vertex">
       uniform mat4 transform;
       attribute vec3 position;
@@ -15,15 +19,69 @@
         gl_Position = transform * vec4(position, 1.0);
       }
     </script>
+
     <script id="fragment-shader" type="x-shader/x-fragment">
       void main() {
         gl_FragColor = vec4(1.0, 1.0, 1.0, 1.0);
       }
     </script>
+
     <script>
-      var gl = Glower.initGl("canvas", function(msg) { alert(msg); });
-      var program = Glower.programFromScripts("vertex-shader", "fragment-shader");
-      console.log(program);
+      var gladder = new Gladder.createContext({
+        canvas: "canvas",
+        debug: true,
+        errorCallback: function(err) { console.error(err); },
+      });
+      var gl = gladder.gl;
+
+      gladder.setFullViewport();
+      gl.clearColor(0.0, 0.0, 0.0, 1.0);
+      gl.enable(gl.DEPTH_TEST);
+      gl.enable(gl.CULL_FACE);
+
+      var program = gladder.createProgram({
+        vertexShader: "vertex-shader",
+        fragmentShader: "fragment-shader",
+        uniforms: { transform: "mat4" },
+        attributes: { position: "vec3" },
+      });
+      program.use();
+
+      // Hack hack hack...
+
+      var cubeData = [
+        0,0,0, 0,1,0, 1,1,0, 1,0,0, // x=0 face
+        0,0,1, 1,0,1, 1,1,1, 0,1,1, // x=1 face
+        0,0,0, 1,0,0, 1,0,1, 0,0,1, // y=0 face
+        0,1,0, 0,1,1, 1,1,1, 1,1,0, // y=1 face
+        0,0,0, 0,0,1, 0,1,1, 0,1,0, // z=0 face
+        1,0,0, 1,1,0, 1,1,1, 1,0,1, // z=1 face
+      ];
+
+      var modelViewMatrix = mat4.create();
+      var projectionMatrix = mat4.create();
+      mat4.perspective(45, gladder.canvas.width / gladder.canvas.height, 0.1, 100.0, projectionMatrix);
+
+      var buffer = gl.createBuffer();
+      gl.bindBuffer(gl.ARRAY_BUFFER, buffer);
+      gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(cubeData), gl.STATIC_DRAW);
+      var itemSize = 3;
+      var numItems = 24;
+      gl.bindBuffer(gl.ARRAY_BUFFER, buffer);
+
+      gladder.mainLoop(function(delta) {
+        gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
+
+        mat4.identity(modelViewMatrix);
+        mat4.translate(modelViewMatrix, [0, 0, -10]);
+
+        var transform = mat4.create();
+        mat4.multiply(projectionMatrix, modelViewMatrix, transform);
+
+        gl.vertexAttribPointer(program.attributes.position, itemSize, gl.FLOAT, false, 0, 0);
+        program.uniforms.transform.set(false, transform);
+        gl.drawArrays(gl.QUADS, 0, numItems);
+      });
     </script>
   </body>
 </html>
