--- a/examples/cube.html
+++ b/examples/cube.html
@@ -10,7 +10,7 @@
     <h1>Gladder : Cube example</h1>
     <p>Because every OpenGL demo needs a spinning cube, right?</p>
 
-    <canvas id="canvas" width="800" height="600"></canvas>
+    <canvas id="canvas" width="640" height="640"></canvas>
 
     <script id="vertex-shader" type="x-shader/x-vertex">
       uniform mat4 transform;
@@ -37,8 +37,6 @@
         errorCallback: function(err) { console.error(err); },
       });
 
-      gla.viewport.setFull();
-      gla.setClearColor(1, 1, 1);
       gla.enableDepthTest();
       gla.enableCullFace();
 
@@ -77,7 +75,7 @@
       var transform = mat4.create();
 
       gla.mainLoop(function(delta) {
-        gla.clear({ colorBuffer: true, depthBuffer: true });
+        gla.clear({ color: [1, 1, 1], depth: 1 });
 
         mat4.rotate(modelMatrix, 0.0008 * delta, [1, 0, 0]);
         mat4.rotate(modelMatrix, 0.0005 * delta, [0, 1, 0]);
