--- a/examples/cube.html
+++ b/examples/cube.html
@@ -15,18 +15,19 @@
     <script id="vertex-shader" type="x-shader/x-vertex">
       uniform mat4 transform;
       attribute vec3 position;
-      varying vec4 color;
+      varying vec3 pos;
       void main() {
-        gl_Position = transform * vec4(position - 0.5, 1.0);
-        color = vec4(position, 1.0);
+        gl_Position = transform * vec4(position, 1.0);
+        pos = position;
       }
     </script>
 
     <script id="fragment-shader" type="x-shader/x-fragment">
       precision mediump float;
-      varying vec4 color;
+      varying vec3 pos;
       void main() {
-        gl_FragColor = color;
+        gl_FragColor.rgb = pow(1.0 - abs(pos.rgb), vec3(3.0));
+        gl_FragColor.a = 1.0;
       }
     </script>
 
@@ -50,12 +51,12 @@
       program.use();
 
       var cubeData = [
-        0,0,0, 0,1,0, 1,1,0, 0,0,0, 1,1,0, 1,0,0, // x=0 face
-        0,0,1, 1,0,1, 1,1,1, 0,0,1, 1,1,1, 0,1,1, // x=1 face
-        0,0,0, 1,0,0, 1,0,1, 0,0,0, 1,0,1, 0,0,1, // y=0 face
-        0,1,0, 0,1,1, 1,1,1, 0,1,0, 1,1,1, 1,1,0, // y=1 face
-        0,0,0, 0,0,1, 0,1,1, 0,0,0, 0,1,1, 0,1,0, // z=0 face
-        1,0,0, 1,1,0, 1,1,1, 1,0,0, 1,1,1, 1,0,1, // z=1 face
+        -1,-1,-1, -1,+1,-1, +1,+1,-1, -1,-1,-1, +1,+1,-1, +1,-1,-1, // x=-1 face
+        -1,-1,+1, +1,-1,+1, +1,+1,+1, -1,-1,+1, +1,+1,+1, -1,+1,+1, // x=+1 face
+        -1,-1,-1, +1,-1,-1, +1,-1,+1, -1,-1,-1, +1,-1,+1, -1,-1,+1, // y=-1 face
+        -1,+1,-1, -1,+1,+1, +1,+1,+1, -1,+1,-1, +1,+1,+1, +1,+1,-1, // y=+1 face
+        -1,-1,-1, -1,-1,+1, -1,+1,+1, -1,-1,-1, -1,+1,+1, -1,+1,-1, // z=-1 face
+        +1,-1,-1, +1,+1,-1, +1,+1,+1, +1,-1,-1, +1,+1,+1, +1,-1,+1, // z=+1 face
       ];
 
       var buffer = new gla.Buffer({
@@ -68,7 +69,7 @@
 
       var viewMatrix = mat4.create();
       mat4.identity(viewMatrix);
-      mat4.translate(viewMatrix, [0, 0, -3]);
+      mat4.translate(viewMatrix, [0, 0, -5]);
 
       var projectionMatrix = mat4.create();
       mat4.perspective(45, gla.canvas.width / gla.canvas.height, 1.0, 10.0, projectionMatrix);
