--- a/examples/framebuffer.html
+++ b/examples/framebuffer.html
@@ -119,7 +119,7 @@
       });
 
       var unitQuadBuffer = new gla.Buffer({
-        data: [ 0,0, 1,0, 1,1, 0,0, 1,1, 0,1 ],
+        data: [ 0,0, 1,0, 1,1, 0,1 ],
         componentsPerItem: 2,
       });
 
@@ -141,7 +141,7 @@
           });
         });
 
-        // Render the horizontally blurred scene to the second framebuffer
+        // Render the scene to the second framebuffer, vertically blurred
         framebuffer2.withBound(function() {
           colorBuffer1.withBound(0, function() {
             gla.draw({
@@ -149,11 +149,12 @@
               uniforms: { sampler: 0, offset: [0, 1 / gla.canvas.height] },
               attributes: { position: unitQuadBuffer },
               count: unitQuadBuffer.numItems,
+              mode: gla.draw.Mode.TRIANGLE_FAN,
             });
           });
         });
 
-        // Render the framebuffer contents to the screen
+        // Render the vertically blurred framebuffer to the screen, horizontally blurred
         // TODO auto-bind textures
         colorBuffer2.withBound(0, function() {
           gla.draw({
@@ -161,6 +162,7 @@
             uniforms: { sampler: 0, offset: [1 / gla.canvas.width, 0] },
             attributes: { position: unitQuadBuffer },
             count: unitQuadBuffer.numItems,
+            mode: gla.draw.Mode.TRIANGLE_FAN,
           });
         });
       });
