--- a/examples/framebuffer.html
+++ b/examples/framebuffer.html
@@ -45,19 +45,15 @@
     <script id="blur-fragment-shader" type="x-shader/x-fragment">
       precision mediump float;
       varying vec2 texCoord;
-      uniform vec2 offset;
+      uniform vec2 step;
       uniform sampler2D sampler;
       void main() {
         gl_FragColor =
-          texture2D(sampler, texCoord - 4.0 * offset) * 0.05 +
-          texture2D(sampler, texCoord - 3.0 * offset) * 0.09 +
-          texture2D(sampler, texCoord - 2.0 * offset) * 0.12 +
-          texture2D(sampler, texCoord -       offset) * 0.15 +
-          texture2D(sampler, texCoord               ) * 0.16 +
-          texture2D(sampler, texCoord -       offset) * 0.15 +
-          texture2D(sampler, texCoord - 2.0 * offset) * 0.12 +
-          texture2D(sampler, texCoord - 3.0 * offset) * 0.09 +
-          texture2D(sampler, texCoord - 4.0 * offset) * 0.05;
+          texture2D(sampler, texCoord - 3.2307692308 * step) * 0.0702702703 +
+          texture2D(sampler, texCoord - 1.3846153846 * step) * 0.3162162162 +
+          texture2D(sampler, texCoord                      ) * 0.2270270270 +
+          texture2D(sampler, texCoord + 1.3846153846 * step) * 0.3162162162 +
+          texture2D(sampler, texCoord + 3.2307692308 * step) * 0.0702702703;
       }
     </script>
 
@@ -88,14 +84,16 @@
       var framebuffer1 = new gla.Framebuffer({
         colorBuffer: gla.CREATE_TEXTURE_2D,
       });
+      framebuffer1.colorBuffer.setFilter(gla.Texture.Filter.LINEAR);
       var framebuffer2 = new gla.Framebuffer({
         colorBuffer: gla.CREATE_TEXTURE_2D,
       });
+      framebuffer2.colorBuffer.setFilter(gla.Texture.Filter.LINEAR);
 
       var blurProgram = new gla.Program({
         vertexShader: "blur-vertex-shader",
         fragmentShader: "blur-fragment-shader",
-        uniforms: { sampler: "sampler2D", offset: "vec2" },
+        uniforms: { sampler: "sampler2D", step: "vec2" },
         attributes: { position: "vec2" },
       });
 
@@ -127,7 +125,7 @@
         gla.draw({
           framebuffer: framebuffer2,
           program: blurProgram,
-          uniforms: { sampler: framebuffer1.colorBuffer, offset: [0, 1 / gla.canvas.height] },
+          uniforms: { sampler: framebuffer1.colorBuffer, step: [0, 1 / gla.canvas.height] },
           attributes: { position: unitQuadBuffer },
           count: unitQuadBuffer.numItems,
           mode: gla.DrawMode.TRIANGLE_FAN,
@@ -136,7 +134,7 @@
         // Render the vertically blurred framebuffer to the screen, horizontally blurred
         gla.draw({
           program: blurProgram,
-          uniforms: { sampler: framebuffer2.colorBuffer, offset: [1 / gla.canvas.width, 0] },
+          uniforms: { sampler: framebuffer2.colorBuffer, step: [1 / gla.canvas.width, 0] },
           attributes: { position: unitQuadBuffer },
           count: unitQuadBuffer.numItems,
           mode: gla.DrawMode.TRIANGLE_FAN,
