--- a/examples/cube.html
+++ b/examples/cube.html
@@ -42,15 +42,17 @@
         attributes: { position: "vec3" },
       });
 
-      var cubeData = [
+      var cubeData = new Float32Array([
         -1,-1,-1, -1,-1,+1, -1,+1,-1, -1,+1,+1, +1,-1,-1, +1,-1,+1, +1,+1,-1, +1,+1,+1, // x direction
         -1,-1,-1, -1,+1,-1, -1,-1,+1, -1,+1,+1, +1,-1,-1, +1,+1,-1, +1,-1,+1, +1,+1,+1, // y direction
         -1,-1,-1, +1,-1,-1, -1,-1,+1, +1,-1,+1, -1,+1,-1, +1,+1,-1, -1,+1,+1, +1,+1,+1, // z direction
-      ];
+      ]);
 
       var buffer = new gla.Buffer({
         data: cubeData,
-        componentsPerItem: 3,
+        views: {
+          position: { size: 3, type: gla.Buffer.Type.FLOAT },
+        }
       });
 
       var modelMatrix = mat4.create();
@@ -80,9 +82,9 @@
         gla.draw({
           program: program,
           uniforms: { transform: transform },
-          attributes: { position: buffer },
+          attributes: { position: buffer.views.position },
           mode: gla.DrawMode.LINES,
-          count: buffer.numItems,
+          count: buffer.views.position.numItems(),
         });
       });
     </script>
