Simplify examples a bit

--- a/examples/cube.html
+++ b/examples/cube.html
@@ -50,9 +50,7 @@
 
       var buffer = new gla.Buffer({
         data: cubeData,
-        views: {
-          position: { size: 3 },
-        }
+        views: { position: { size: 3 } },
       });
 
       var modelMatrix = mat4.create();
