--- a/examples/cube.html
+++ b/examples/cube.html
@@ -12,7 +12,7 @@
 
     <canvas id="canvas" width="640" height="640"></canvas>
 
-    <script id="vertex-shader" type="x-shader/x-vertex">
+    <script id="vertex-shader" type="x-shader/x-vertex" class="display-as-pre">
       uniform mat4 transform;
       attribute vec3 position;
       void main() {
@@ -20,14 +20,14 @@
       }
     </script>
 
-    <script id="fragment-shader" type="x-shader/x-fragment">
+    <script id="fragment-shader" type="x-shader/x-fragment" class="display-as-pre">
       precision mediump float;
       void main() {
         gl_FragColor = vec4(0.0, 0.0, 0.0, 1.0);
       }
     </script>
 
-    <script>
+    <script id="main" class="display-as-pre">
       var gla = new Gladder({
         canvas: "canvas",
         debug: true,
@@ -86,5 +86,7 @@
         });
       });
     </script>
+
+    <script src="loader.js"></script>
   </body>
 </html>
