--- a/examples/texture.html
+++ b/examples/texture.html
@@ -13,7 +13,7 @@
 
     <canvas id="canvas" width="640" height="640"></canvas>
 
-    <script id="vertex-shader" type="x-shader/x-vertex">
+    <script id="vertex-shader" type="x-shader/x-vertex" class="display-as-pre">
       uniform float time;
       uniform mat4 transform;
       attribute vec2 position;
@@ -26,7 +26,7 @@
       }
     </script>
 
-    <script id="fragment-shader" type="x-shader/x-fragment">
+    <script id="fragment-shader" type="x-shader/x-fragment" class="display-as-pre">
       precision mediump float;
       uniform sampler2D sampler;
       varying vec2 tc;
@@ -35,7 +35,7 @@
       }
     </script>
 
-    <script>
+    <script id="main" class="display-as-pre">
       var gla = new Gladder({
         canvas: "canvas",
         debug: true,
@@ -115,6 +115,8 @@
         });
       });
     </script>
+
+    <script src="loader.js"></script>
   </body>
 </html>
 
